--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -40,6 +40,13 @@
           </ul>
         </li>
 
+        <% if current_user %>
+            Signed in as <%= current_user.email %> | <%= link_to "Logout", '/logout' %>
+          <% else %>
+            <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+        <% end %>
+
+      
 
         
         <li>
