--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,38 +1,15 @@
 <section class="orders-show">
 
   <header class="page-header">
-    <h1>Order #<%= @order.id %></h1>
+    <h2>Order #<%= @order.id %></h2>
   </header>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th colspan="2">Product</th>
-          <th>Unit Price</th>
-          <th>Quantity</th>
-          <th>Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @order.line_items.each do |product_id| %>
-          <%= render 'item', product_id: product_id %>
-        <% end %>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="4">
-            TOTAL:
-          </th>
-          <th>
-            <%= humanized_money_with_symbol @order.total_cents / 100.0 %>
-          </th>
-        </tr>
-      </tfoot>
-    </table>
+    <%= render @order %>
+    <h4 class="well">Your total is: <%= @order.total %></h4>
+    <h5 class="pull-right">Please check <%= @order.email %> for your confirmation!</h5>
+    <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
   </div>
-
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
